--- a/index.html
+++ b/index.html
@@ -19,16 +19,32 @@
         <div id="topbar">
             <div id="topinfo">
                 <div class="topname topitem">Barnes Lawn & Landscaping</div>
-                <div class="topitem">Address</div>
-                <div class="topitem">Phone</div>
-                <div class="topitem">Hours</div>
-                <div class="topitem">Facebook</div>
-            </div><!--topinfo/-->
-        </div><!--topbar/-->
+                <div class="topitem"><img src= "images/home.svg">Address</div>
+                <div class="topitem"><img src= "images/phone.svg">Phone</div>
+                <div class="topitem"><img src= "images/clock.svg">Hours</div>
+                <div class="topitem"><img src= "images/facebook-logo.svg"></div>
+            </div><!-- /topinfo -->
+        </div><!-- /topbar -->
+
+        <button class="menu button">MENU</button>
+        <button class="close button">CLOSE</button>
+
+        <div class="navlinks">
+            <ul>
+                <a href="#"><li>LINK ONE</li></a>
+                <a href="#"><li>LINK TWO</li></a>
+                <a href="#"><li>LINK THREE</li></a>
+                <a href="#"><li>LINK FOUR</li></a>
+                <a href="#"><li>LINK FIVE</li></a>
+            </ul>
+        </div> 
 
         <div id="mainimg"></div>
-    </section><!--header/-->
 
+    </section>
+    <!--/Header-->
+
+    <!-- Services -->
     <section id="services">
         <div class="container">
             <div class="service">Lawn Maintenance</div>
@@ -37,6 +53,8 @@
             <div class="service">Service 4</div>
         </div>
     </section>
+    <!-- /Services -->
+
 
 
 
@@ -45,11 +63,16 @@
     <!-- /Map -->
 
     <!-- Footer -->
+    <section id="footer">
+        <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+    </section>
 
     <!-- /Footer -->
 
 
     <!-- JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/app.js" type="text/javascript"></script>
 
 </body>
 </html>
