Changed images and added 'About', 'Map', and 'Footer' sections.

--- a/index.html
+++ b/index.html
@@ -42,16 +42,44 @@
     </section>
     <!-- /Services -->
 
-
-
+    <!-- About -->
+    <section id="about">
+        <div class="container">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ipsum tortor, molestie in tincidunt ac, maximus malesuada arcu. Vivamus eget erat lacinia libero venenatis laoreet. Nullam vitae est orci. Fusce blandit interdum turpis. Fusce at augue ultricies, convallis est id, imperdiet ligula. Nunc ut nunc non augue feugiat hendrerit. Maecenas eget enim efficitur, dictum velit in, dignissim erat. Maecenas ut bibendum lectus. Nunc ac tellus est.
+            </p>
+            <p>
+                Phasellus scelerisque venenatis orci, tempor blandit eros ullamcorper vitae. Ut at justo posuere, commodo lorem eu, pulvinar quam. Etiam tempor a leo pellentesque interdum. Etiam imperdiet auctor lacus, eu fringilla elit ullamcorper consequat. Pellentesque vehicula posuere diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas sodales felis eget nulla dictum finibus. Aenean id rutrum tellus.        
+            </p>
+            <div class="center">
+                <button id="contactbutton" type="button">Contact Us</button> 
+            </div> 
+        </div>
+    </section>
+    <!-- /About -->
 
     <!-- Map -->
-
+    <section id="map">
+            <img id="placeholder" src="http://via.placeholder.com/300x300">
+    </section>
     <!-- /Map -->
 
     <!-- Footer -->
     <section id="footer">
-        <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        <div class="upper">
+            Test Line <br>
+            Test Line <br>
+            Test Line <br>
+            Test Line <br>
+            Test Line <br>
+        </div>
+        <div class="lower">
+            Test Line <br>
+            Test Line <br>
+            Test Line <br>
+            Test Line <br>
+            Test Line <br>
+        </div>
     </section>
 
     <!-- /Footer -->
