Added logo and grass image.
Grass image behind contact box.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             </div><!-- /topinfo -->
         </div><!-- /topbar -->
 
-        <div id="mainimg"></div>
+        <div id="mainimg">
+            <img src="images/logo.svg" alt="Barnes Lawn & Landscaping Logo">            
+        </div>
 
     </section>
     <!--/Header-->
@@ -62,7 +64,7 @@
             <input class="client_input" id="client_name" type="text" placeholder="Your Name ">
             <input class="client_input" id="client_email" type="email" placeholder="Your E-mail ">
             <input class="client_input" id="client_phone" type="tel" placeholder="Your Phone Number ">
-            <textarea class= "client_input" id="client_message" rows="9" placeholder="Your Message"></textarea>
+            <textarea class= "client_input" id="client_message" rows="9" placeholder="Your Message..."></textarea>
         </div>
     </section>
     <!-- /Contact -->
