Added some service images, changed CSS sizing.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,20 @@
     <!-- Services -->
     <section id="services">
         <div class="servicesbox">
-            <div class="service">Lawn Maintenance</div>
-            <div class="service">Landscape Maintenance</div>
-            <div class="service">Service 3</div>
-            <div class="service">Service 4</div>
+            <div class="service">
+                <img src="images/mower.svg" alt="Lawn Maintenance">
+                Lawn Maintenance
+            </div>
+            <div class="service">
+                <img src="images/landscape.svg" alt="Landscaping">
+                Landscape Maintenance
+            </div>
+            <div class="service">
+                Service 3
+            </div>
+            <div class="service">
+                Service 4
+            </div>
         </div>
     </section>
     <!-- /Services -->
