--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 
     <!-- Style Sheets -->
     <link rel = "stylesheet" type = "text/css" href = "css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link rel = "stylesheet" type = "text/css" href = "css/style.css" />
+
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,300i,700,700i" rel="stylesheet">
@@ -67,6 +70,19 @@
     </section>
     <!-- /About -->
 
+    <!-- Gallery -->
+    <section id="gallery">
+        <div class="gallerybox">
+            <div><img src= 'images/gallery/gallery1.jpg'></div>
+            <div><img src= 'images/gallery/gallery2.jpg'></div>
+            <div><img src= 'images/gallery/gallery3.jpg'></div>
+            <div><img src= 'images/gallery/gallery4.jpg'></div>
+            <div><img src= 'images/gallery/gallery5.jpg'></div>
+            <div><img src= 'images/gallery/gallery6.jpg'></div>
+        </div>
+    </section>
+    <!-- /Gallery -->
+
     <!-- Contact -->
     <section id="contact">
         <div id="contactbox">
@@ -105,11 +121,18 @@
             Test Line <br>
         </div>
     </section>
-
     <!-- /Footer -->
 
 
     <!-- JavaScript -->
+
+    <script
+        src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous">
+    </script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
+    
 </body>
 </html>
