--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Barnes Lawn & Landscaping</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
 
     <!-- Style Sheets -->
     <link rel = "stylesheet" type = "text/css" href = "css/normalize.css" />
