Added last 2 services, added contact button, commented out map.

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
                 Landscape Maintenance
             </div>
             <div class="service">
-                Service 3
+                <img src="images/house-green.svg" alt="Landscaping">
+                Gutter Cleaning and Pressure Washing
             </div>
             <div class="service">
-                Service 4
+                <img src="images/fence.svg" alt="Landscaping">
+                Fencing
             </div>
         </div>
     </section>
@@ -92,6 +94,9 @@
             <input class="client_input" id="client_email" type="email" placeholder="Your E-mail ">
             <input class="client_input" id="client_phone" type="tel" placeholder="Your Phone Number ">
             <textarea class= "client_input" id="client_message" rows="9" placeholder="Your Message..."></textarea>
+            <div id="contactbuttons">
+                <button class="formsubmit" type="button">Send</button>
+            </div>
         </div>
     </section>
     <!-- /Contact -->
@@ -99,9 +104,9 @@
     <!-- Map -->
     <section id="mapsection">
         <div id="map"></div>
-        <script async defer
+        <!--<script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnu7X4wM6vgP8Qy2O7fSXvEQ4HyGG4Gvc&callback=initMap">
-        </script>
+        </script> -->
     </section>
     <!-- /Map -->
 
