Added top info, added new font, stylized services.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Barnes Lawn & Landscaping</title>
@@ -13,7 +13,7 @@
 
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,300i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Slabo+27px" rel="stylesheet">
 </head>
 
 <body>
@@ -23,10 +23,9 @@
         <div id="topbar">
             <div id="topinfo">
                 <div class="topname topitem">Barnes Lawn & Landscaping</div>
-                <div class="topitem"><img src= "images/home.svg">Address</div>
-                <div class="topitem"><img src= "images/phone.svg">Phone</div>
-                <div class="topitem"><img src= "images/clock.svg">Hours</div>
-                <div class="topitem"><img src= "images/facebook-logo.svg"></div>
+                <div class="topitem"><img src= "images/phone.svg">Matthew Barnes:<a class="phonelink" href="tel:+1-502-664-5941">502-664-5941</a></div>
+                <div class="topitem"><img src= "images/phone.svg">Michael Barnes:<a class="phonelink" href="tel:+1-502-664-5745">502-664-5745</a></div>
+                <div class="topitem"><a href="https://www.facebook.com/BarnesLawnAndLandscaping/"><img class="facebook" src= "images/facebook-logo.svg"></a></div>
             </div><!-- /topinfo -->
         </div><!-- /topbar -->
 
@@ -42,25 +41,38 @@
         <div class="servicesbox">
             <div class="service">
                 <img src="images/mower.svg" alt="Lawn Maintenance">
-                Lawn Maintenance
+                <div class="servicetitle">Lawn Maintenance</div>
+                <div class="serviceinfo">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec elementum tortor. Donec ullamcorper convallis ex, in pellentesque sapien molestie sed. Sed id mauris consequat, commodo nulla sit amet, luctus erat. Cras ligula orci, mollis in massa ut, fermentum rhoncus metus. Fusce diam justo, posuere vel lectus in, accumsan lobortis sem. Nulla facilisi.
+                </div>
             </div>
             <div class="service">
                 <img src="images/landscape.svg" alt="Landscaping">
-                Landscape Maintenance
+                <div class="servicetitle">Landscape Maintenance</div>
+                <div class="serviceinfo">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec elementum tortor. Donec ullamcorper convallis ex, in pellentesque sapien molestie sed. Sed id mauris consequat, commodo nulla sit amet, luctus erat. Cras ligula orci, mollis in massa ut, fermentum rhoncus metus. Fusce diam justo, posuere vel lectus in, accumsan lobortis sem. Nulla facilisi.
+                </div>
             </div>
             <div class="service">
                 <img src="images/house-green.svg" alt="Landscaping">
-                Gutter Cleaning and Pressure Washing
+                <div class="servicetitle">Gutter Cleaning and Pressure Washing</div>
+                <div class="serviceinfo">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec elementum tortor. Donec ullamcorper convallis ex, in pellentesque sapien molestie sed. Sed id mauris consequat, commodo nulla sit amet, luctus erat. Cras ligula orci, mollis in massa ut, fermentum rhoncus metus. Fusce diam justo, posuere vel lectus in, accumsan lobortis sem. Nulla facilisi.
+                </div>
             </div>
             <div class="service">
                 <img src="images/fence.svg" alt="Landscaping">
-                Fencing
+                <div class="servicetitle">Fencing</div>
+                <div class="serviceinfo">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec elementum tortor. Donec ullamcorper convallis ex, in pellentesque sapien molestie sed. Sed id mauris consequat, commodo nulla sit amet, luctus erat. Cras ligula orci, mollis in massa ut, fermentum rhoncus metus. Fusce diam justo, posuere vel lectus in, accumsan lobortis sem. Nulla facilisi.
+                </div>
             </div>
         </div>
     </section>
     <!-- /Services -->
 
     <!-- About -->
+    <hr class="divider" width="80%">
     <section id="about">
         <div class="aboutbox">
             <p>
@@ -71,6 +83,7 @@
             </p>
         </div>
     </section>
+    <hr class="divider" width="80%">
     <!-- /About -->
 
     <!-- Gallery -->
