Experementing with top scroll button.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <body>
 
+    <button onclick="topFunction()" id="topbutton" title="Go to top"><img src= "images/up-arrow.svg"></button>
+
     <!-- Header -->
     <section id="header">
         <div id="topbar">
