--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="service">
                 <img src="images/house-green.svg" alt="Landscaping">
-                <div class="servicetitle">Gutter Cleaning and Pressure Washing</div>
+                <div class="servicetitle">Pressure Washing</div>
                 <div class="serviceinfo">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec elementum tortor. Donec ullamcorper convallis ex, in pellentesque sapien molestie sed. Sed id mauris consequat, commodo nulla sit amet, luctus erat. Cras ligula orci, mollis in massa ut, fermentum rhoncus metus. Fusce diam justo, posuere vel lectus in, accumsan lobortis sem. Nulla facilisi.
                 </div>
@@ -128,18 +128,10 @@
     <!-- Footer -->
     <section id="footer">
         <div class="upper">
-            Test Line <br>
-            Test Line <br>
-            Test Line <br>
-            Test Line <br>
-            Test Line <br>
         </div>
         <div class="lower">
-            Test Line <br>
-            Test Line <br>
-            Test Line <br>
-            Test Line <br>
-            Test Line <br>
+            <div class="copyright">&copy Copyright 2017 Barns Lawn and Landscaping</div>
+            <div class="freepik">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
         </div>
     </section>
     <!-- /Footer -->
