--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link rel = "stylesheet" type = "text/css" href = "css/style.css" />
-
+    <link rel = "stylesheet" type = "text/css" href = "css/media.css" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Slabo+27px" rel="stylesheet">
@@ -27,7 +27,7 @@
                 <div class="topname topitem">Barnes Lawn & Landscaping</div>
                 <div class="topitem"><img src= "images/phone.svg">Matthew Barnes:<a class="phonelink" href="tel:+1-502-664-5941">502-664-5941</a></div>
                 <div class="topitem"><img src= "images/phone.svg">Michael Barnes:<a class="phonelink" href="tel:+1-502-664-5745">502-664-5745</a></div>
-                <div class="topitem"><a href="https://www.facebook.com/BarnesLawnAndLandscaping/"><img class="facebook" src= "images/facebook-logo.svg"></a></div>
+                <div class="topitem icondiv"><a href="https://www.facebook.com/BarnesLawnAndLandscaping/"><img class="facebook" src= "images/facebook-logo.svg"></a></div>
             </div><!-- /topinfo -->
         </div><!-- /topbar -->
 
@@ -131,6 +131,7 @@
         </div>
         <div class="lower">
             <div class="copyright">&copy Copyright 2017 Barns Lawn and Landscaping</div>
+            <div class="credit">Created by <a href="mailto:kjstan@gmail.com">Kyle Stanfield</a></div>
             <div class="freepik">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
         </div>
     </section>
