Added viewport meta to fix sizing issues with media query.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Barnes Lawn & Landscaping</title>
     <link rel="icon" type="image/png" href="favicon.png" />
 
@@ -108,7 +109,7 @@
             <input class="client_input" id="client_name" type="text" placeholder="Your Name ">
             <input class="client_input" id="client_email" type="email" placeholder="Your E-mail ">
             <input class="client_input" id="client_phone" type="tel" placeholder="Your Phone Number ">
-            <textarea class= "client_input" id="client_message" rows="9" placeholder="Your Message..."></textarea>
+            <textarea class= "client_input" id="client_message" rows="7" placeholder="Your Message..."></textarea>
             <div id="contactbuttons">
                 <button class="formsubmit" type="button">Send</button>
             </div>
