Continued working on CSS sizing.

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     <!-- Map -->
     <section id="mapsection">
         <div id="map"></div>
-        <!--<script async defer
+        <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnu7X4wM6vgP8Qy2O7fSXvEQ4HyGG4Gvc&callback=initMap">
-        </script> -->
+        </script>
     </section>
     <!-- /Map -->
 
