--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
         <div class="lower">
             <div class="copyright">&copy Copyright 2017 Barns Lawn and Landscaping</div>
-            <div class="credit">Created by <a href="mailto:kjstan@gmail.com">Kyle Stanfield</a></div>
+            <div class="credit">Website Designed by <a href="mailto:kjstan@gmail.com">Kyle Stanfield</a></div>
             <div class="freepik">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
         </div>
     </section>
